--- a/mic-site/public/stylesheets/schedule.css
+++ b/mic-site/public/stylesheets/schedule.css
@@ -89,8 +89,8 @@ main p {
 .guide {
 	display: flex;
 	align-items: center;
-	justify-content: center;
 	flex-wrap: wrap;
+	background: #fff;
 }
 
 .room-key {
