--- a/mic-site/public/stylesheets/speakers.css
+++ b/mic-site/public/stylesheets/speakers.css
@@ -15,6 +15,16 @@ header {
 	margin: 20px 0 0 0;
 	display: flex;
 	align-items: center;
+	justify-content: space-between;
+}
+
+header .left {
+	display: flex;
+}
+
+header .right img {
+	width: 75px;
+	border-radius: 75px;
 }
 
 header a img {
