--- a/mic-site/views/index.pug
+++ b/mic-site/views/index.pug
@@ -137,6 +137,9 @@ html(lang="en")
 						.sponsor-tile
 							a(href="https://www.amazon.com/" target="_blank" rel="noopener noreferrer")
 								img.tier-three(src="images/sponsors/amazon-logo.jpg" alt="Amazon Logo")
+						.sponsor-tile
+							a(href="https://www.redhat.com/" target="_blank" rel="noopener noreferrer")
+								img.tier-three(src="images/sponsors/redhat-logo.png" alt="RedHat Logo")
 					.become-sponsor
 						a.cta-button(href="mailto:sponsors@machineintelligence.cc") Become A Sponsor
 			section#committee
